--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
 enhancedeventbus = "1.0.0"
 deftils = "2.0.0"
-caffeine = "2.9.3"
-okhttp = "4.9.3"
-okio = "3.2.0"
-universalcraft = "242"
-elementa = "554"
+caffeine = "3.1.3"
+okhttp = "4.10.0"
+okio = "3.3.0"
+universalcraft = "254"
+elementa = "576+pull-104"
+vigilance = "280"
