Update Essential dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,6 @@ deftils = "2.0.0"
 caffeine = "3.1.3"
 okhttp = "4.9.3"
 okio = "3.0.0"
-universalcraft = "254"
-elementa = "576+pull-104"
-vigilance = "280"
+universalcraft = "262"
+elementa = "578"
+vigilance = "281+pull-78"
